more changes to formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
+    "editor.detectIndentation": false,
     "editor.formatOnSave": true,
-    "files.trimFinalNewlines": true,
-    "files.insertFinalNewline": true,
     "editor.insertSpaces": true,
-    "editor.tabSize": 2,
+    "editor.tabSize": 4,
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
+    "rust-analyzer.check.command": "clippy",
 }
